kubernetes/Amer/cluster-deployment/Deployments/argocd/argocd/deployment-argocd-notifications-controller/networkpolicy.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"labels":{"app.kubernetes.io/component":"notifications-controller","app.kubernetes.io/name":"argocd-notifications-controller","app.kubernetes.io/part-of":"argocd"},"name":"argocd-notifications-controller-network-policy","namespace":"argocd"},"spec":{"ingress":[{"from":[{"namespaceSelector":{}}],"ports":[{"port":9001,"protocol":"TCP"}]}],"podSelector":{"matchLabels":{"app.kubernetes.io/name":"argocd-n [...]
    creationTimestamp: "2025-01-15T17:25:27Z"
    generation: 1
    labels:
      app.kubernetes.io/component: notifications-controller
      app.kubernetes.io/name: argocd-notifications-controller
      app.kubernetes.io/part-of: argocd
    name: argocd-notifications-controller-network-policy
    namespace: argocd
    resourceVersion: "40373"
    uid: 1b8ad33c-4c92-4d16-9fea-a494b67661ae
  spec:
    ingress:
    - from:
      - namespaceSelector: {}
      ports:
      - port: 9001
        protocol: TCP
    podSelector:
      matchLabels:
        app.kubernetes.io/name: argocd-notifications-controller
    policyTypes:
    - Ingress
kind: List
metadata:
  resourceVersion: ""
